--- a/header.html
+++ b/header.html
@@ -49,7 +49,7 @@ body {
 <div class="navbar">
   <a href="https://lynker-intel.com"><i class="fa fa-fw fa-code"></i> Lynker</a>
   <a href="https://water.noaa.gov"><i class="fa fa-fw fa-wifi"></i> NOAA OWP</a>
-  <a href=".https://mikejohnson51.github.io/hyAggregate/"><i class="fa fa-fw fa-file"></i>Documentation</a>
+  <a href="https://mikejohnson51.github.io/hyAggregate/"><i class="fa fa-fw fa-file"></i>Documentation</a>
     <a href="https://github.com/NOAA-OWP/ngen"><i class="fa fa-fw fa-github"></i>Nextgen</a>
   <a href="https://github.com/mikejohnson51/hydrofab"><i class="fa fa-fw fa-github"></i>hydrofab</a>
   <a href="https://github.com/mikejohnson51/nextgen.hydrofab"><i class="fa fa-fw fa-github"></i>nextgen.hydrofab</a>
